<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".music.CarMusicActivity">


    <View
        android:id="@+id/bgView"
        android:layout_width="match_parent"
        android:layout_height="434dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/bluetoothStatusTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="286dp"
        android:layout_marginTop="105dp"
        android:text="@string/bluetooth_not_connect"
        android:textColor="@color/ffffff"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/musicTitleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="@id/bluetoothStatusTV"
        app:layout_constraintStart_toStartOf="@id/previousIV"
        app:layout_constraintEnd_toEndOf="@id/nextIV"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/not_play_music"
        android:textSize="@dimen/sp_23"
        android:textColor="@color/ffffff"
        android:layout_marginTop="54dp"
        />


    <TextView
        android:id="@+id/musicLyricTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/musicTitleTV"
        app:layout_constraintStart_toStartOf="@id/previousIV"
        app:layout_constraintEnd_toEndOf="@id/nextIV"
        android:gravity="center"
        android:textColor="@color/ffffff"
        android:layout_marginTop="40dp"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:ellipsize="marquee"
        android:textSize="20sp" />




    <ImageView
        android:id="@+id/nextIV"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/musicLyricTV"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="80dp"
        />

    <ImageView
        android:id="@+id/previousIV"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nextIV"
        app:layout_constraintBottom_toBottomOf="@id/nextIV"
        android:layout_marginStart="700dp"
        />


    <ImageView
        android:id="@+id/playIV"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/arrowright_seleted"
        app:layout_constraintEnd_toStartOf="@id/nextIV"
        app:layout_constraintTop_toTopOf="@id/nextIV"
        app:layout_constraintBottom_toBottomOf="@id/nextIV"
        app:layout_constraintStart_toEndOf="@id/previousIV"
        />


    <View
        android:id="@+id/listBgV"
        android:layout_width="340dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="50dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/titleRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/listBgV"
        app:layout_constraintTop_toTopOf="@id/listBgV"
        app:layout_constraintEnd_toEndOf="@id/listBgV"
        app:layout_constraintBottom_toBottomOf="@id/listBgV"
        android:layout_marginTop="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"

        />

    <com.android.launcher.view.LoadingView
        android:id="@+id/loadingV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/titleRV"
        app:layout_constraintEnd_toEndOf="@id/titleRV"
        app:layout_constraintTop_toTopOf="@id/titleRV"
        app:layout_constraintBottom_toBottomOf="@id/titleRV"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/musicListTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ffffff"
        android:textSize="22sp"
        android:text="@string/music_play_list"
        app:layout_constraintStart_toStartOf="@id/listBgV"
        app:layout_constraintTop_toTopOf="@id/listBgV"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>